--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -27,9 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="learn/elements.html">
 
 <!-- Configure your routes here -->
