make narrative-text a component, even though it doesn't do anything. Constistency seems good.

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -5,3 +5,4 @@
 <link rel="import" href="capsule-unit.html">
 <link rel="import" href="info-block.html">
 <link rel="import" href="lesson-reference.html">
+<link rel="import" href="narrative-text.html">
