--- a/app/elements/learn/zooming-image.html
+++ b/app/elements/learn/zooming-image.html
@@ -18,8 +18,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 313px;
-    height: 200px;
+    width: 0px;
+    height: 0px;
     z-index: 20;
   };
 
@@ -27,11 +27,39 @@
       display: inline;
       width: auto;
       height: auto;
-      -webkit-transition: 10s ease-in-out;
-      -moz-transition: 10s ease-in-out;
-      -o-transition: 10s ease-in-out;
-      transition: 10s ease-in-out;
+      animation: to-full-size 1s cubic-bezier(0.39, 0.58, 0.57, 1)  running;
+      --webkit-animation: to-full-size 1s cubic-bezier(0.39, 0.58, 0.57, 1)  running;
   }
+
+
+  /* Chrome, Safari, Opera */ 
+  @-webkit-keyframes to-full-size {
+      25% {width: 25%; height: 25%;}
+      50% {width: 50%; height: 50%;}
+      75% {width: 75%; height: 75%;}
+      100% {width: 100%; height: 100%;}
+  } 
+
+  /* Standard syntax */ 
+  @keyframes to-full-size {
+      25% {width: 25%; height: 25%;}
+      50% {width: 50%; height: 50%;}
+      75% {width: 75%; height: 75%;}
+      100% {width: 100%; height: 100%;}
+  }
+
+  /* Chrome, Safari, Opera */ 
+  @-webkit-keyframes to-small-size {
+      from {width: auto; height: auto;}
+      to {width: 313px; height: 200px;}
+  } 
+
+  /* Standard syntax */ 
+  @keyframes to-small-size {
+      from {width: auto; height: auto;}
+      to {width: 313px; height: 200px;}
+  }
+
   </style>
   <template>
     <div id="zooming-image">
@@ -59,7 +87,8 @@
         zoomed.classList.add('zoomed');
       } else {
         zoomed.onload = this.showFullSized;
-        zoomed.addEventListener('click',this.hideFullSized)
+        zoomed.addEventListener('click',this.hideFullSized);
+        zoomed.addEventListener('keyup', this.zoomOutOnEsc);
         zoomed.src = this.fullSrc;
       }
     },
