--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -11,24 +11,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 
 <!-- Paper elements -->
-<link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
-<link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
-<link rel="import" href="../bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="../bower_components/paper-styles/paper-styles-classes.html">
-<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+
+<!-- Neon elements -->
+<link rel="import" href="../bower_components/neon-animation/neon-animation.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="learn/elements.html">
 
-<!-- Configure your routes here -->
-<link rel="import" href="routing.html">
