move nav into separate element so that it stays put as lesson-ref brings its lesson on page

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -2,6 +2,7 @@
 <link rel="import" href="lesson-block.html">
 <link rel="import" href="zooming-image.html">
 <link rel="import" href="lesson-banner.html">
+<link rel="import" href="learn-nav.html">
 <link rel="import" href="capsule-unit.html">
 <link rel="import" href="info-block.html">
 <link rel="import" href="lesson-reference.html">
