--- a/app/lesson.html
+++ b/app/lesson.html
@@ -9,8 +9,8 @@
 		<link rel="import" href="elements/elements.html">
 	</head>
 
-	<body class="fullbleed"> <!-- Don't really know the details of these Material/Polymer classes -->
-
+	<body class="fullbleed">
+		<learn-nav></learn-nav>
 		<lesson-banner image="/images/learn/basic-website-banner.png" title="Create a Basic Website"></lesson-banner>
 
 		<div>
