knight lab logo shouldn't go to 'home' of site

--- a/app/elements/learn/learn-nav.html
+++ b/app/elements/learn/learn-nav.html
@@ -29,7 +29,7 @@ Example:
             position: relative;
         }
 
-        #home-link {
+        #kl-link {
             position: absolute;
             right: 40px;
         }
@@ -38,7 +38,7 @@ Example:
             <div id="navigation">
             <!-- TK: hamburger menu? -->
             Learn
-            <a id="home-link" href="/index.html"><img src="/images/learn/banner-logo-white.png"></a>
+            <a id="kl-link" href="http://knightlab.northwestern.edu"><img src="/images/learn/banner-logo-white.png"></a>
         </div>
     
     </template>
