--- a/app/elements/learn/info-block.html
+++ b/app/elements/learn/info-block.html
@@ -17,49 +17,32 @@ Example:
 
   ::content .info-content-wrapper {
     background-color: #F5F4F4;
-    padding: 25px;
-    margin-left: 15px;
-    margin-right: 15px;
   };
 
   .info-content-wrapper h2 {
    color: #263238;
-   float: right;
  }
 
   .info-content-wrapper p {
    color: #9B9B9B;
-   float: right;
  }
-
-  .clearfix {
-     overflow: auto;
- }
-
-  img {
-    float: left;
-    padding-top: 50px;
+  .info-block-img {
+    margin: auto;
+  }
+  .info-block-img img {
+    margin: auto;
   }
 
-/*
-  p {
-    float: right;
-    padding-left: 15px;
-  }
-
-  h2{
-    flo
-    color: #263238;
-  }
-*/
   </style>
   <template>
   <paper-material elevation="0" class="paper-font-body2">
-    <div class="info-content-wrapper">
-      <div class="image-wrapper">
+    <div class="info-content-wrapper layout horizontal">
+      <div class="flex info-block-img">
         <img src="{{ image }}">
       </div>
-      <content></content>
+      <div class="flex-2">
+        <content></content>  
+      </div>
     </div>
   </paper-material>
   </template>
@@ -71,7 +54,7 @@ Example:
     properties: {
       image: {
         type: String,
-        value: ""
+        value: "images/learn/info-icon.png"
       }
     }
   });
