--- a/app/lesson.html
+++ b/app/lesson.html
@@ -44,11 +44,11 @@
 						A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
 					</p>
 				</div>
-				<media-group class="layout horizontal around-justified">
+				<media-group class="layout horizontal">
 					<zooming-image src="/images/learn/mac-screenshot.png" full-src="/images/learn/mac-screenshot-big.png"></zooming-image>
 					<zooming-image src="/images/learn/pc-screenshot.png" full-src="/images/learn/pc-screenshot-big.png"></zooming-image>
 				</media-group>
-				<info-block image="images/learn/info-icon.png">
+				<info-block>
 					<h2>What do files and folders have to do with websites</h2>
 					<p>
 						A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
@@ -70,7 +70,7 @@
           </p>
         </lesson-reference>
 
-        <info-block image="images/learn/info-icon.png">
+        <info-block>
           <h2>HTML (HyperText Markup Language)</h2>
           <p>HTML is the backbone of the web, and the beginning of any website. To break that down: “Hypertext” means the document contains text that has links to other text, like stylesheets or scripts, for example. “Markup Language” is a way of formatting a file so that it distinguishes between content and structure—it “marks up” the text to make it easy for the browser to tell which words it should display on the screen, vs. those that are there to tell it how to structure the page.</p>
         </info-block>
