layout-align attribute doesn't do anything

--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -61,7 +61,7 @@ Example:
 
 	</style>
 	<template>
-		<content-wrapper layout-align="center center">
+		<content-wrapper>
 			<step-number>{{ stepnum }}</step-number>
 			<paper-material class="paper-font-body2">
 				<h2>{{ title }}</h2>
