--- a/app/lesson.html
+++ b/app/lesson.html
@@ -44,12 +44,12 @@
 						A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
 					</p>
 				</div>
-				<media-group class="layout horizontal">
+				<media-group class="layout horizontal around-justified">
 					<zooming-image src="/images/learn/mac-screenshot.png" full-src="/images/learn/mac-screenshot-big.png"></zooming-image>
 					<zooming-image src="/images/learn/pc-screenshot.png" full-src="/images/learn/pc-screenshot-big.png"></zooming-image>
 				</media-group>
 				<info-block>
-					<h2>What do files and folders have to do with websites</h2>
+					<h2>What do files and folders have to do with websites?</h2>
 					<p>
 						A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
 					</p>
