Finally finished the capsule-unit with working animation and added an example to the prototype page. Also fixed some spacing on the info-block.

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -28,6 +28,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Add your elements here -->
 <link rel="import" href="../bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animations.html">
 <link rel="import" href="learn/elements.html">
 
 <!-- Configure your routes here -->
