--- a/app/lesson.html
+++ b/app/lesson.html
@@ -38,9 +38,13 @@
 				<h2>
 					You'll need to get started
 				</h2>
-				<div style="display:flex">
-					<capsule-unit image="images/learn/text-editor.png" label="Text Editor" style="padding-right: 25px"></capsule-unit>
-					<capsule-unit image="images/learn/ftp-program.png" label="FTP Program" style="padding-right: 25px"></capsule-unit>
+				<div class="horizontal layout">
+					<capsule-unit image="images/learn/text-editor.png" title="Text Editor">
+						A text editor is a type of program used for editing plain text files.
+	          Text editors are provided with operating systems and software development packages, and can be used to change configuration files, documentation files and programming language source code
+					</capsule-unit>
+					<capsule-unit image="images/learn/ftp-program.png" title="FTP Program">
+					</capsule-unit>
 				</div>
 			</lesson-block>
 
@@ -50,12 +54,6 @@
 				<p>
 					You don't want your web files mixing with the rest of your things. Put this folder somewhere you can find it easily.
 				</p>
-				<div>
-					<h2>What do files and folders have to do with websites?</h2>
-					<p>
-						A website is just a collection of files that your browser reads and displays. Putting those files in organized folders enables us to give the browser exact directions to the locations of those files. So, no search or spotlight allowed—know where your files are so you can send the browser down the right path. Broken paths, missing files, or imprecise directions is a common reason things break. Ever seen a 404 message? That’s why!
-					</p>
-				</div>
 				<media-group class="layout horizontal around-justified">
 					<zooming-image src="/images/learn/mac-screenshot.png"></zooming-image>
 					<zooming-image src="/images/learn/pc-screenshot.png"></zooming-image>
@@ -78,7 +76,7 @@
 <p>To create a website, you’ll need to start with an HTML file.</p>
 <lesson-reference title="Basic HTML" image="/images/learn/source-code.png">
 <p>
-In this standalone lesson, we'll hit on the rules and regulations for writing solid HTML, as well as the top tags you’re likely to use. Head into this standalone lesson for a better understanding of how to markup your content.  
+In this standalone lesson, we'll hit on the rules and regulations for writing solid HTML, as well as the top tags you’re likely to use. Head into this standalone lesson for a better understanding of how to markup your content.
 </p>
 </lesson-reference>
 
