resolve merge conflict

--- a/app/elements/learn/zooming-image.html
+++ b/app/elements/learn/zooming-image.html
@@ -133,7 +133,7 @@
           type: String,
           value: ""
       },
-      keyEventTarget: {
+      keyEventTarget: { // IronA11yKeysBehavior - listen for esc anywhere on page
         type: Object,
         value: function() {
           return document.body;
