--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -23,5 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animations.html">
+
+<!-- Add your elements here -->
 <link rel="import" href="learn/elements.html">
 
