Fixed merge conflicts & renamed  to  and changed all of the component references to follow

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -5,5 +5,5 @@
 <link rel="import" href="learn-nav.html">
 <link rel="import" href="capsule-unit.html">
 <link rel="import" href="info-block.html">
-<link rel="import" href="lesson-reference.html">
+<link rel="import" href="lesson-ref.html">
 <link rel="import" href="narrative-text.html">
