--- a/app/lesson.html
+++ b/app/lesson.html
@@ -60,23 +60,13 @@
 				</p>
 			</step-block>
 
-<<<<<<< HEAD
-<step-block title="Write some HTML">
-<p>To create a website, you’ll need to start with an HTML file.</p>
-<lesson-reference title="Basic HTML" image="/images/learn/source-code.png">
-<p>
-In this standalone lesson, we'll hit on the rules and regulations for writing solid HTML, as well as the top tags you’re likely to use. Head into this standalone lesson for a better understanding of how to markup your content.
-</p>
-</lesson-reference>
-=======
       <step-block title="Write some HTML">
         <p>To create a website, you’ll need to start with an HTML file.</p>
-        <lesson-reference title="Basic HTML" image="/images/learn/source-code.png">
+        <lesson-ref title="Basic HTML" image="/images/learn/source-code.png">
           <p>
-          In this standalone lesson, we'll hit on the rules and regulations for writing solid HTML, as well as the top tags you’re likely to use. Head into this standalone lesson for a better understanding of how to markup your content.  
+          In this standalone lesson, we'll hit on the rules and regulations for writing solid HTML, as well as the top tags you’re likely to use. Head into this standalone lesson for a better understanding of how to markup your content.
           </p>
-        </lesson-reference>
->>>>>>> 61884b2767d0e9ab56619c68e233af24c0ab12b2
+        </lesson-ref>
 
         <info-block>
           <h2>HTML (HyperText Markup Language)</h2>
