Added link-ref.html (still not working) and added it to the elements.html file

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -7,3 +7,4 @@
 <link rel="import" href="info-block.html">
 <link rel="import" href="lesson-ref.html">
 <link rel="import" href="narrative-text.html">
+<link rel="import" href="link-ref.html">
