--- a/app/lesson.html
+++ b/app/lesson.html
@@ -32,6 +32,7 @@
 					<capsule-unit image="images/learn/text-editor.png" title="Text Editor">
 						A text editor is a type of program used for editing plain text files.
 	          Text editors are provided with operating systems and software development packages, and can be used to change configuration files, documentation files and programming language source code
+						<link-ref image="images/learn/text-editor.png" title="Sublime Text" link="http://www.sublimetext.com/"></link-ref>
 					</capsule-unit>
 					<capsule-unit image="images/learn/ftp-program.png" title="FTP Program">
 					</capsule-unit>
