link-ref.html is up and running and there are working examples in lesson.html

--- a/app/lesson.html
+++ b/app/lesson.html
@@ -33,6 +33,9 @@
 						A text editor is a type of program used for editing plain text files.
 	          Text editors are provided with operating systems and software development packages, and can be used to change configuration files, documentation files and programming language source code
 						<link-ref image="images/learn/text-editor.png" title="Sublime Text" link="http://www.sublimetext.com/"></link-ref>
+						<link-ref image="images/learn/text-editor.png" title="Notepad++" link="https://notepad-plus-plus.org/"></link-ref>
+						<link-ref image="images/learn/text-editor.png" title="Atom" link="https://atom.io/"></link-ref>
+						<link-ref image="images/learn/text-editor.png" title="TextMate" link="https://macromates.com/"></link-ref>
 					</capsule-unit>
 					<capsule-unit image="images/learn/ftp-program.png" title="FTP Program">
 					</capsule-unit>
